Skip to content

CUDA: CMake 3.15 uses `--options-file` when linking static cuda library with `link.exe`

3.14 works fine...

[587/624] Linking CUDA static library foo.lib
FAILED: foo.lib 
cmd.exe /C "cd . && link.exe /lib /nologo /machine:x64 /out:foo.lib --options-file CMakeFiles\foo.rsp  && cd ."
LINK : warning LNK4044: Nicht erkannte Option /-options-file; wird ignoriert.
Edited by Brad King
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information